--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -11,5 +11,6 @@ vue init webpack cli-vue2-test
 ```
 ![img.png](img.png)
 #### vue-cli2项目结构
-static目录会原封不动的复制到dist中，不会想src中的图片一样需要考虑是转成base64还是复制图片
+    static目录会原封不动的复制到dist中，不会想src中的图片一样需要考虑是转成base64还是复制图片
 ![img_1.png](img_1.png)
+### runtime-only和runtime-compiler对比（01为compiler版本、02为only版本）
