compiler和only模式的一个对比

--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -14,3 +14,29 @@ vue init webpack cli-vue2-test
     static目录会原封不动的复制到dist中，不会想src中的图片一样需要考虑是转成base64还是复制图片
 ![img_1.png](img_1.png)
 ### runtime-only和runtime-compiler对比（01为compiler版本、02为only版本）
+#### 区别
+    其实两者的区别就在于main.js中使用组件的方式，compiler模式方式使用了template，而only模式使用了render函数进行替代
+![img_2.png](img_2.png)
+#### vue运行过程
+```
+//compiler的过程
+//template->ast->render->vdom-ui
+
+//only的过程(1.性能更高  2.代码量更少)
+//render->vdom->ui
+
+//render函数不使用箭头函数时应该为
+render: funcation(createElement) {
+    //1.普通用法（创建标签）：createElement('标签', {标签属性}, ['内容'])
+   
+    return createElement('h2'， 
+        {class：'box'}, 
+            ['Hello World', createElement('button', ['按钮'])]);
+            
+    //2. 传入组件，虽然在only模式中App.vue等文件中函数有template，但实际上这些文件中的tempalte会由
+    vue-template-compiler解析为render函数，我们导入组件的时候不是去导入那个文件而是组件对象，对象中
+    已经就是render函数了而不是tempalte
+    return createElement(组件对象)
+}
+```
+![img_3.png](img_3.png)
