--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -40,3 +40,7 @@ render: funcation(createElement) {
 }
 ```
 ![img_3.png](img_3.png)
+#### npm run build
+![img_4.png](img_4.png)
+#### npm run dev
+![img_5.png](img_5.png)
