--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -44,3 +44,7 @@ render: funcation(createElement) {
 ![img_4.png](img_4.png)
 #### npm run dev
 ![img_5.png](img_5.png)
+### cli2和cli3区别
+![img_6.png](img_6.png)
+### cli3创建项目
+![img_7.png](img_7.png)
