--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -48,3 +48,11 @@ render: funcation(createElement) {
 ![img_6.png](img_6.png)
 ### cli3创建项目
 ![img_7.png](img_7.png)
+#### 项目结构
+![img_8.png](img_8.png)
+#### 项目配置
+    当我们安装了cli3之后，同时就安装了vue ui。此时我们只要执行vue ui就会启动一个本地服务器，其可以管理我们的cli3项目，包括创建项目、导入项目以及管理配置。
+![img_9.png](img_9.png)
+    实际上配置被放到了cli-service中
+![img_10.png](img_10.png)
+    如果确实需要手动配置一些内容，则在项目中新增vue.config.js文件
