--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -56,3 +56,4 @@ render: funcation(createElement) {
     实际上配置被放到了cli-service中
 ![img_10.png](img_10.png)
     如果确实需要手动配置一些内容，则在项目中新增vue.config.js文件
+![img_11.png](img_11.png)
