箭头函数及前后端渲染、前后端路由

--- a/14-vue脚手架/00-安装及说明/说明.md
+++ b/14-vue脚手架/00-安装及说明/说明.md
@@ -57,3 +57,17 @@ render: funcation(createElement) {
 ![img_10.png](img_10.png)
     如果确实需要手动配置一些内容，则在项目中新增vue.config.js文件
 ![img_11.png](img_11.png)
+### 路由
+#### 什么是路由
+    路由就是通过互联的网络把信息从源地址传输到目的地址的活动。
+    路由提供两种机制：路由和转送
+        1. 路由是决定数据包从来源到目的地的路径
+        1. 转送将输入端的数据转移到合适的输出端
+    路由中有一个重要的概念叫路由表，路由表本质上就是一个映射表，决定了数据包的指向。
+#### 前端路由和后端路由（前端渲染和后端渲染）
+1. 后端路由（后端渲染）：如jsp（java server page）其从服务器传到浏览器的时候已经渲染出来了，早期其中一般只包括HTML+CSS。后端处理URL和页面之间的映射关系就是后端路由
+   ![img_12.png](img_12.png)
+1. 前后端分离（前端渲染）
+    ![img_13.png](img_13.png)
+1. 前端路由（单页面富应用阶段）
+    ![img_14.png](img_14.png)
