--- a/14-vue脚手架/00-安装及说明/路由.md
+++ b/14-vue脚手架/00-安装及说明/路由.md
@@ -25,3 +25,8 @@
 ![img_25.png](img_25.png)
 ## 路由传递参数
 ![img_26.png](img_26.png)
+## 导航守卫使用
+![img_27.png](img_27.png)    
+![img_28.png](img_28.png)     
+## keep-alive保留页面状态信息    
+![img_29.png](img_29.png)
