--- a/17-网络模块封装/网络请求.md
+++ b/17-网络模块封装/网络请求.md
@@ -23,3 +23,7 @@
 1. axios.put(url`[, data[, config]]`)
 1. axios.head(url`[, config]`)
 1. axios.patch(url`[, data[, config]]`)
+### 常见配置选项
+![img_3.png](img_3.png)
+### 拦截器
+![img_4.png](img_4.png)
